2008-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 433401 -
	Static methods don't show in the Methods dropdown'.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor.mdp: Updated.

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Change file name to
	match class name.

2008-10-08  Andreia Gaita  <avidigal@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Don't run the
	autocorrect/underline error timer if the UnderlineErrors options is
	false (fixes #433288)

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/EditActions.cs: Track API.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: fixed 'Bug 432856 -
	  Creation and editing broken for unsaved files'.

2008-10-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.mdp: Updated.
	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Add a way to enable
	  vi mode.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Call the text editor
	  widget even if the escape key is pressed.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Fixed bug with on
	  the fly edit options changing.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs: Exposed the
	  control left/right option to the user.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Exposet
	  ControlLeftRightMode option in the options class == made a real
	  monodevelop property (default value taken from platform service).

2008-09-29  Mike Krüger <mkrueger@novell.com> 
