@@ -814,9 +814,11 @@ namespace MonoDevelop.SourceEditor
 			} else {
 				idx = complete_word.Length;
 			}
+			int length = String.IsNullOrEmpty (partial_word) ? 0 : partial_word.Length;
+			int offset = this.widget.TextEditor.Caret.Offset - length;
 			
-			this.widget.TextEditor.Document.Replace (ctx.TriggerOffset, String.IsNullOrEmpty (partial_word) ? 0 : partial_word.Length, new StringBuilder (complete_word));
-			this.widget.TextEditor.Caret.Offset = ctx.TriggerOffset + idx;
+			this.widget.TextEditor.Document.Replace (offset, length, new StringBuilder (complete_word));
+			this.widget.TextEditor.Caret.Offset = offset + idx;
 		}
 		
 		void FireCompletionContextChanged ()
